--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ export default function LoveMessage() {
 
   useEffect(() => {
     if (stage > 0) {
-      const audio = new Audio("C:/Users/Admin/Downloads/Westlife_-_My_Love.mp3");
+      const audio = new Audio("/music.mp3");
       audio.play();
     }
   }, [stage]);
@@ -17,13 +17,10 @@ export default function LoveMessage() {
   };
 
   return (
-    <div className="flex items-center justify-center min-h-screen bg-gray-900 text-white">
-      {stage === 0 && (
-        <p className="text-lg cursor-pointer" onClick={handleClick}>
-          Em có một món quà, hãy nhấn vào để nhận nó
-        </p>
-      )}
-
+    <div
+      className="flex items-center justify-center min-h-screen bg-gray-900 text-white"
+      onClick={stage === 0 ? handleClick : undefined}
+    >
       {stage > 0 && (
         <motion.div
           initial={{ scale: 0 }}
